Fix settings ui on mobile

--- a/web/src/css/popup.css
+++ b/web/src/css/popup.css
@@ -153,8 +153,8 @@
     height: 0;
   }
   100% {
-    width: 80%;
-    height: 40vh;
+    width: 30vw;
+    height: 30vh;
   }
 }
 
@@ -164,8 +164,8 @@
     height: 0;
   }
   100% {
-    width: 45vw;
-    height: 90vh;
+    width: 31vw;
+    height: 83vh;
   }
 }
 
@@ -270,7 +270,7 @@
   overflow-y: scroll;
   max-height: calc(100% - 38px);
   padding: 50px;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 38px;
 }
 
