--- a/web/src/css/settings.css
+++ b/web/src/css/settings.css
@@ -486,6 +486,38 @@ table {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 600px) {
+  #settings-button {
+    margin-top: -12px !important;
+  }
+  #settings-leftbar {
+    padding: 10px;
+    width: 100%;
+    flex: unset;
+  }
+  .settings-buttons {
+    padding: 10px 90px;
+  }
+  #settings-rightbar {
+    width: 90vw !important;
+  }
+  #settings-light-rightbar {
+    width: 80vw !important;
+  }
+  #settings-rightbartop {
+    width: 90vw !important;
+  }
+  #guild-settings-rightbar {
+    width: 90vw !important;
+  }
+  #guild-overview-name-input,
+  #set-info-title-guild-name {
+    margin-left: 0px !important;
+  }
+  #set-info-title-guild-name {
+    margin-top: 0px;
+  }
+}
 
 #settings-leftbar > div {
   display: flex;
@@ -731,7 +763,7 @@ table {
 }
 #guild-overview-name-input {
   margin-bottom: 100px;
-  margin-left: 355px;
+  margin-left: 335px;
 }
 #channel-overview-name-input {
   margin-bottom: 100px;
