--- a/web/src/css/style.css
+++ b/web/src/css/style.css
@@ -896,10 +896,10 @@
     left: 62px;
   }
   .channel-button {
-    width: 30% !important;
+    width: 37% !important;
     margin-top: 18px !important;
-    margin-left: -48px !important;
-    transform: scale(1.5);
+    margin-left: -52px !important;
+    transform: scale(1.3);
   }
   #guilds-list {
     display: none;
@@ -931,6 +931,7 @@
     padding-left: 40px;
   }
   #friend-icon-sign {
+    top: 15px;
     left: 40px;
   }
   #channel-info-for-friend {
@@ -958,12 +959,6 @@
   #avatar-wrapper {
     background-color: transparent;
     left: 0px;
-  }
-  #settings-button {
-    margin-top: -12px !important;
-  }
-  #friend-icon-sign {
-    top: 15px;
   }
 }
 
